update requests dto and swagger-documentation
